[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "option-pricing"
version = "1.0.0"
description = "A Python library implementing European option pricing models and analytics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Eklavya"},
    {name = "Soham Gupta"},
    {name = "Prasad Wagh"},
    {name = "Parth Kalia"}
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.9"
]

[tool.setuptools.packages.find]
include = ["option_pricing*"]